[gd_scene load_steps=22 format=3 uid="uid://oq25ayamluoa"]

[ext_resource type="Script" path="res://entities/actors/player/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bktcuc17kucpr" path="res://entities/actors/player/sprites/bird_3.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dkkxtdy5qqaf0" path="res://entities/actors/player/sprites/bird_1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://6bhp2i1c1a0w" path="res://entities/actors/player/sprites/bird_2.png" id="4"]
[ext_resource type="AudioStream" uid="uid://b2l2dhjlss1l" path="res://sfx/wing.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://cl2fn0ojoo2xo" path="res://sfx/die.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://bdrrr7nrox7kf" path="res://sfx/hit.wav" id="7"]

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("3")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("3")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("3")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("4")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="14"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}],
"loop": true,
"name": &"bird_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}],
"loop": true,
"name": &"bird_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("13")
}],
"loop": true,
"name": &"bird_3",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="1"]
radius = 7.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("14")
animation = &"bird_1"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="DeadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7")
